src/styles/session/SessionNotification.scss
.SessionNotification {
    // height: 83px;
    // display: flex;
    // background: #F67D7D;
    // flex-direction: row;
    // justify-content: center;
    // text-align: left;

    height: 40px;
    background: #F2F9FF;
    //ADD OUTLINE
    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.1));
    display: flex;
    flex-direction: row;
    text-align: left;
    position: absolute;
    margin: auto;
    width: 60%;
    top: 700px;
    bottom: 0;
 
    .label {
        align-self: center;
        color: #484848;
        font-family: Roboto;
        font-style: normal;
        font-weight: 250px;
        font-size: 14px;
        letter-spacing: 0.642857px;
        padding: 20px;
    }
    .button {
        align-self: center;
        right: 0px;
        outline: none; 
        border: none;
        background-color: transparent;
        color: #5599DB;
        font-family: Roboto;
        font-size: 14px;
        font-weight: 500px;
        line-height: 48px;   
        padding: 20px;    
    }

    img {
        align-self: center;
        position: absolute;
        size: 80%;
        left: 28px;
    }
    
    p {
        // align-self: center;
        // position: absolute;
        width: 70%;
        float: left;
        font-family: Roboto;
        font-style: normal;
        font-weight: 500;
        font-size: 16px;
        letter-spacing: 0.642857px;
        margin: 0;
        color: #484848;
    }
}

@media only screen and (max-width: $mobile-breakpoint) {
    .SessionNotification {
        p {
            width: 60%;
            font-size: 16px;
        }
    }
}

